Tue Jun 22 16:15:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSThread.m: Various changes to tidy up notification handling
	to avoid warning messages and to ensure that observers get notified
	before the application becomes multi-threaded.

Mon Jun 21 20:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSFileManager.m: Fixed error recursing into directory.
	* Source/include/NSFileManager.h: tidied.

Mon Jun 21  9:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Mostly updates of range checking code and change of FastArray and
	FastMap to use the prefix GSI (GnuStepInline) rather than Fast -
	less likely to conflict with other names.
	* Source/include/NSRange.h: Added GS_RANGE_CHECK() macro for consistent
	range checking.
	* Source/include/FastArray.x: Renamed to GSIArray.h
	* Source/include/FastMap.x: Renamed to GSIMap.h
	* Source/include/NSArchiver.h: Changed Fast to GSI
	* Source/NSString.m: Use GS_RANGE_CHECK()
	* Source/NSGString.m: ditto
	* Source/NSGCString.m: ditto
	* Source/NSAttributedString.m: ditto
	* Source/NSGAttributedString.m: ditto
	* Source/NSData.m: ditto
	* Source/NSArray.m: ditto
	* Source/NSGArray.m: ditto
	* Source/GNUmakefile: Renamed Fast... to GSI...
	* Source/Makefile.postamble: Renamed Fast... to GSI...
	* Source/NSArchiver.m: ditto
	* Source/NSGCountedSet.m: ditto
	* Source/NSGDictionary.m: ditto
	* Source/NSGSet.m: ditto
	* Source/NSNotificationCenter.m: ditto
	* Source/NSRunLoop.m: ditto
	* Source/NSSerializer.m: ditto
	* Source/NSUnarchiver.m: ditto

Fri Jun 18  8:36:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSFileManager.m: Fix lookup of fileGroupOwnerAccountName
	Fix test for symbolic links, add diagnostic info, fix copy to produce
	files owned by current user.
	* Source/include/NSFileManager.h: tidyup
	* Source/include/NSObject.h: fixup for ASSIGN macro - should work for
	all objects.
